Some functionality added

--- a/views/admin-page.hbs
+++ b/views/admin-page.hbs
@@ -20,12 +20,14 @@
     </div>
 
     <div class="col-4">
-        <a href="/admin/feedback">
+        <a href="/admin/taxi">
             <div class="card bg-primary p-3 d-flex justify-content-center align-items-center" style="width: 18rem;">
                 <div class="card-body">
-                    <p class="card-text text-light text-center">Feedback</p>
+                    <p class="card-text text-light text-center">Taxi Data</p>
                 </div>
             </div>
         </a>
     </div>
-</div>
+
+
+    
