--- a/views/customer_table.hbs
+++ b/views/customer_table.hbs
@@ -14,7 +14,7 @@
             <th scope="col">Phone</th>
             <th scope="col">Email</th>
             <th scope="col">Street</th>
-            <th scope="col" class="text-end">Action</th>
+            {{!-- <th scope="col" class="text-end">Action</th> --}}
 
         </tr>
     </thead>
@@ -28,11 +28,11 @@
             <th scope="row">{{this.phone}}</th>
             <th scope="row">{{this.email}}</th>
             <th scope="row">{{this.street}}</th>
-            <th scope="row" class="text-end">
+            {{!-- <th scope="row" class="text-end">
                 <a href="#" type="button" class="btn btn-light btn-small"><i class="bi bi-eye"> View</i></a>
                 <a href="#" type="button" class="btn btn-light btn-small"><i class="bi bi-pencil"> Edit</i></a>
                 <a href="#" type="button" class="btn btn-light btn-small"><i class="bi bi-person-x"> Delete</i></a>
-            </th>
+            </th> --}}
         </tr>
         {{/each}}
     </tbody>
