--- a/views/taxi_table.hbs
+++ b/views/taxi_table.hbs
@@ -1,11 +1,11 @@
 <div class="row">
-    <div class="col-6"><h1>Driver</h1></div>
-    <div class="col-6 d-flex justify-content-end">
+    <div class="col-6"><h1>Taxi Details</h1></div>
+    {{!-- <div class="col-6 d-flex justify-content-end">
         <a href="#">
             <button type="button" class="btn btn-primary"><i class="bi bi-person-plus-fill"></i> Add User</button>
         </a>
         
-    </div>
+    </div> --}}
 </div>
 
 <table class="table table-dark mt-1">
@@ -18,7 +18,7 @@
             <th scope="col">Taxi Type</th>
             <th scope="col">Status</th>
             <th scope="col">Driver Id</th>
-            <th scope="col" class="text-end">Action</th>
+            {{!-- <th scope="col" class="text-end">Action</th> --}}
 
         </tr>
     </thead>
@@ -31,11 +31,11 @@
             <th scope="row">{{this.manufacturing_year}}</th>
             <th scope="row">{{this.taxi_type}}</th>
             <th scope="row">{{this.taxi_status}}</th>
-            <th scope="row" class="text-end">
+            {{!-- <th scope="row" class="text-end">
                 <a href="#" type="button" class="btn btn-light btn-small" ><i class="bi bi-eye">View</i></a>
                 <a href="#" type="button" class="btn btn-light btn-small" ><i class="bi bi-pencil">Edit</i></a>
                 <a href="#" type="button" class="btn btn-light btn-small" ><i class="bi bi-person-x">Delete</i></a>
-            </th>
+            </th> --}}
         </tr>
         {{/each}}
     </tbody>
